# ESengine

./: CMakeLists.txt  LICENSE  compile_flags.txt
conf/: server.conf
include/se/: Config.h  Deduplicator.h  DirScanner.h  DocExtractor.h  Document.h  PageStore.h  Tokenizer.h
src/: Config.cpp  Deduplicator.cpp  DirScanner.cpp  DocExtractor.cpp  PageStore.cpp  Tokenizer.cpp
